--- a/portfolio.html
+++ b/portfolio.html
@@ -385,6 +385,19 @@
             </li>
           </ul>
         </div>
+
+        <form class="footer-form">
+          <b class="form-bold">Підпишіться на розсилку</b>
+          <div class="footer-feeld">
+            <input class="footer-input" type="email" placeholder="E-mail" />
+            <button type="submit" class="footer-submint">
+              Підписатися
+              <svg class="icon-send" width="24" height="24">
+                <use href="./images/icon.svg#icon-send"></use>
+              </svg>
+            </button>
+          </div>
+        </form>
       </div>
     </footer>
   </body>
